# asimov-sim-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/examples/: profile.toml
docs/rfcs/: README.md  RFC-0001-repo-architecture.md  RFC-0002-source-sync-and-provenance.md  RFC-0003-domain-schema-contract.md  RFC-0004-cli-and-operator-workflow.md  RFC-0005-validation-and-error-taxonomy.md  RFC-0006-evidence-and-export-contract.md  RFC-0007-ci-release-and-quality-gates.md  RFC-0008-viewer-open-contract.md  RFC-0009-pipeline-context.md
docs/schemas/: asset-manifest.schema.json  doctor-result.schema.json  error-result.schema.json  evidence-bundle-result.schema.json  export-package-manifest.schema.json  export-package-result.schema.json  inspect-result.schema.json  runtime-smoke-result.schema.json  validation-result.schema.json  (+1 more)
scripts/: check_error_registry.py  check_release_evidence.py  demo.py  generate_schemas.py  viewer_demo.py  write_release_candidate_report.py
tests/: conftest.py  test_cli_edges.py  test_config_paths.py  test_doctor.py  test_error_registry.py  test_errors.py  test_evidence.py  test_examples.py  test_export_package.py  test_inspect.py  test_inspect_edges.py  test_pipeline_context.py  test_preset_edges.py  test_real_upstream_smoke.py  test_release_evidence.py  test_runtime_smoke.py  test_schemas.py  test_smoke.py  test_validation.py  test_validation_edges.py  test_viewer_open.py
(+52 files in other folders)
